@@ -1,5 +1,7 @@
 package com.ford.syncV4.proxy;
 
+import com.ford.syncV4.proxy.rpc.SyncMsgVersion;
+
 /**
  * Created with Android Studio.
  * Author: Chernyshov Yuriy - Mobile Development
@@ -8,4 +10,17 @@ package com.ford.syncV4.proxy;
  */
 public class RPCStructFactory {
 
+    /**
+     * Create instance of the {@link com.ford.syncV4.proxy.rpc.SyncMsgVersion} object with actual
+     * {@link com.ford.syncV4.proxy.rpc.SyncMsgVersion#getMajorVersion()} and
+     * {@link com.ford.syncV4.proxy.rpc.SyncMsgVersion#getMinorVersion()} fields values
+     *
+     * @return instance of the {@link com.ford.syncV4.proxy.rpc.SyncMsgVersion}
+     */
+    public static SyncMsgVersion createSyncMsgVersion() {
+        SyncMsgVersion syncMsgVersion = new SyncMsgVersion();
+        syncMsgVersion.setMajorVersion(3);
+        syncMsgVersion.setMinorVersion(0);
+        return syncMsgVersion;
+    }
 }
